k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: openshift-demo
  labels:
    app: openshift-demo
    app.kubernetes.io/name: openshift-demo
    app.kubernetes.io/part-of: openshift-demo-app
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: openshift-demo
